--- a/KaranSinMorsommeFerie/A Hoved Database/klær.css
+++ b/KaranSinMorsommeFerie/A Hoved Database/klær.css
@@ -83,7 +83,16 @@
   }
 
   .tabell_ord {
-    padding: 0px;
+    text-decoration: none;
+    padding-left: 0px;
+    margin-top: 18px;
+    font-weight: normal;
+    text-transform: lowercase;
+    font-size: 24px;
+    font-style: normal;
+    font-family: monospace;
+    color: black;
+    cursor: pointer;
   }
 
   li {
@@ -102,6 +111,7 @@
     /* gjør så main ikke har noe ekstra margin utenfor eller paddin inni*/
     margin: 0px;
     padding: 0px;
+
   }
 
   /*css for varene under nyheter i main starter under her*/
@@ -404,7 +414,7 @@ img {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     /* styler tekst. */
-    5tg4fr3de text-decoration: none;
+    text-decoration: none;
     text-transform: uppercase;
     font-size: 28px;
     font-weight: bold;
@@ -573,7 +583,7 @@ img {
   color: black;
   cursor: pointer;
 }
-
+@media only screen and (min-width: 600px) {
 .tabell_ord {
   text-decoration: none;
   padding-left: 30px;
@@ -585,6 +595,7 @@ img {
   font-family: monospace;
   color: black;
   cursor: pointer;
+}
 }
 
 /* styling av Ordene i tabellen når man tar musen over ordene*/
@@ -640,6 +651,7 @@ img {
 .vare>a {
   /* farge til tekst. */
   color: black;
+  text-decoration: none;
 }
 
 .vare:hover {
