--- a/KaranSinMorsommeFerie/portefolje/A Hoved Database/main.css
+++ b/KaranSinMorsommeFerie/portefolje/A Hoved Database/main.css
@@ -654,8 +654,8 @@ font-size: 18px;
 /*css for reklame video og footer starter under her*/
 #myVideo {
   margin-left: 300px;
-  height: 30%;
-  width: 60%;
+  height: 45%;
+  width: 85%;
 }
 @media only screen and (min-width: 600px) {
 .footer_og_video {
@@ -668,8 +668,8 @@ font-size: 18px;
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
-  width: 97.4%;
-  padding: 20px;
+  width: 1420px;
+  padding-top:0px;
 }
 }
 
