--- a/KaranSinMorsommeFerie/portefolje/internett_historie/k.css
+++ b/KaranSinMorsommeFerie/portefolje/internett_historie/k.css
@@ -6,16 +6,16 @@ body {
 	color: white;
   padding-left: 20px;
   padding-right: 20px;
-  background-image:url("nett.jpg");
+  background-image:url("wifi.jpg");
 
 
 }
-main{
+.oppgave{
   width: 70%;
   margin-left: auto;
   margin-right: auto;
   background-color: grey;
-  margin: auto;
+  margin-bottom: 50px;
     border-color: salmon;
     border-radius: 50px;
     border-style: solid;
@@ -26,15 +26,19 @@ main{
   padding-bottom: 20px;
 
 
+}
 
+header>h1{
+	color: black;
 }
   p {
 
-    padding: 30px;
-    border-radius: 10px;
+    padding: 20px;
+    border-radius: 5px;
   }
 
   h1 {
+		margin: 0px;
     text-align: center;
 
   }
