--- a/KaranSinMorsommeFerie/portefolje/main3.css
+++ b/KaranSinMorsommeFerie/portefolje/main3.css
@@ -1,3 +1,7 @@
+html{
+   scroll-behavior: smooth;
+}
+
 /*css for hele body når den er større enn 600px starter under her*/
 @media only screen and (min-width: 600px) {
   body {
@@ -15,61 +19,73 @@
 @media only screen and (min-width: 600px) {
   .header_øverst {
     text-align: center;
-    /* Lager en grid. */
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
     /* styler tekst*/
     text-decoration: none;
     text-transform: uppercase;
     font-size: 20px;
     font-weight: bold;
+    margin: 0px;
   }
 }
 
-/*css for vanlig koding som ikke har noen begrenset størrelse starter under her*/
-/*css for den hvite linjen øverst starter under her*/
 
 
-
-.header_øverst>.usynlig {
-  /* viser hvor stor plass til den usynlige delen*/
-  grid-column: span 1;
+.knapp_header>a{
+color: white;
+border-style: solid;
+border-color: white;
+border-width: 5px;
+padding: 12px 28px;
+font-style: monospace;
+text-decoration: none;
 }
+
+.knapp_header>a:hover{
+transition: all 0.4s ease-in-out;
+border-color: #022c70;
+}
+
+.logo{
+  padding-top: 80px;
+  text-align: center;
+}
+
 
 .header_over_mitt_navn{
   color: white;
-    padding-top: 61px;
+    padding-top: 40px;
 }
 
 @media only screen and (min-width: 600px) {
-  .logo{
-    grid-column: span 7;
-  }
   .logo>.overskrift {
-    font-size: 59px;
+    font-size: 89px;
     color: white;
     /* endrer plassering*/
-    padding-right: 0px;
-    padding-left: 110px;
+    margin-top: 0px;
     grid-column: span 7;
   }
 }
 
 
-.header_øverst>.usynlig {
-  grid-column: span 1;
+
+.hele_følg_meg{
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
 }
 
+.usynlig_følg-meg{
+grid-column: span 11;
+}
 .følg_meg{
-  margin-top: 150px;
-  font-size: 24px;
   grid-column: span 2;
+  padding-top: 60px;
+  font-size: 24px;
 }
 
 
 /* Style all font awesome icons */
 .fa {
-  margin-top: 130px;
+  margin-top: 45px;
   padding: 21px;
   font-size: 30px;
   width: 70px;
@@ -77,6 +93,7 @@
   text-decoration: none;
   border-radius: 90%;
   float: left;
+  position:
 }
 
 /* Add a hover effect if you want */
@@ -98,10 +115,16 @@
   color: white;
 }
 
+.fa-linkedin{
+  background: #3B5998;
+  color: white;
+}
+
 header{
-  background-image: url(bilder/header_bak.png);
+  background-image: url(bilder/astronomy-beautiful-clouds-355465.jpg);
     background-repeat: no-repeat;
-    height: 300px;
+    background-size: 100%;
+    height: 820px;
 }
 
 
@@ -111,7 +134,6 @@ img:hover{
   transform: scale(1.1);
 }
 
-
 /* Style the tab buttons */
 .tablink {
   background-color: #555;
@@ -120,7 +142,8 @@ img:hover{
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
+  padding: 24px 16px;
+  margin-top: 230px;
   font-size: 17px;
   width: 20%;
 }
@@ -136,6 +159,26 @@ img:hover{
   display: none;
   padding: 50px;
   text-align: center;
+    margin-top: 230px;
+}
+
+
+h1{
+  font-size: 40px;
+}
+.hele_tab{
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+}
+
+.bilde_tabcontent{
+  grid-column: span 1;
+  margin: 0px;
+}
+
+.resten_tab_content{
+  padding-top: 30px;
+  grid-column: span 8;
 }
 
 /* Style each tab content individually */
@@ -144,12 +187,6 @@ img:hover{
 #Tokyo {background-color:blue;}
 #Oslo {background-color:orange;}
 #signaler {background-color:pink;}
-
-
-
-h1{
-  font-size: 40px;
-}
 
 .tekst_om{
   margin-bottom: 50px;
@@ -241,8 +278,8 @@ padding-top: 60px;
     color: white; /* White text color */
   }
 
-  .html {width: 60%; background-color: #4CAF50;} /* Green */
-  .css {width: 40%; background-color: #2196F3;} /* Blue */
+  .html {width: 70%; background-color: #4CAF50;} /* Green */
+  .css {width: 60%; background-color: #2196F3;} /* Blue */
   .js {width: 7%; background-color: #f44336;} /* Red */
 
 
